--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -59,7 +59,7 @@
 
         <Button
             android:id="@+id/btn_next_step"
-
+            android:enabled="false"
             android:text="Next"
             android:layout_marginLeft="4dp"
             android:background="@color/colorButton"
