--- a/app/src/main/res/layout/fragment_booking_step_one.xml
+++ b/app/src/main/res/layout/fragment_booking_step_one.xml
@@ -15,6 +15,6 @@
         android:id="@+id/recycler_studio"
         android:layout_marginTop="4dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
