--- a/app/src/main/res/layout/fragment_booking_step_two.xml
+++ b/app/src/main/res/layout/fragment_booking_step_two.xml
@@ -10,6 +10,6 @@
         android:id="@+id/recycler_room"
         android:layout_marginTop="4dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
