--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content" >
 
         <ImageView
-            android:src="@drawable/ic_account_circle_white_24dp"
+            android:src="@drawable/ic_baseline_menu_24"
             android:layout_width="60dp"
             android:layout_height="60dp" />
 
@@ -51,132 +51,281 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:weightSum="4"
-        android:padding="8dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:padding="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view_booking"
+                android:layout_marginRight="8dp"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/ic_event_note_black_24dp"
+                        android:layout_width="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:text="Booking"
+                        android:fontFamily="@font/bellerose"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="20sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view_cart"
+                android:layout_marginRight="8dp"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/ic_shopping_cart_black_24dp"
+                        android:layout_width="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:text="Cart"
+                        android:fontFamily="@font/bellerose"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="20sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view_history"
+                android:layout_marginRight="8dp"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/ic_history_black_24dp"
+                        android:layout_width="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:text="History"
+                        android:fontFamily="@font/bellerose"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="20sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view_notification"
+                android:layout_marginRight="8dp"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/ic_notifications_black_24dp"
+                        android:layout_width="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="50dp" />
+
+                    <TextView
+                        android:text="Notification"
+                        android:fontFamily="@font/bellerose"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="20sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_booking"
-            android:layout_marginRight="8dp"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_booking_info"
             app:cardCornerRadius="8dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:visibility="gone"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
                 android:orientation="vertical"
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
-                    android:src="@drawable/ic_event_note_black_24dp"
-                    android:layout_width="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="50dp" />
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                <TextView
-                    android:text="Booking"
-                    android:fontFamily="@font/bellerose"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/textCardSize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                        <ImageView
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/ic_event_note_black_24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:text="Your Booking Information"
+                            android:layout_marginLeft="8dp"
+                            android:textStyle="bold"
+                            android:textSize="18sp"
+                            android:fontFamily="@font/bellerose"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_cart"
-            android:layout_marginRight="8dp"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:cardCornerRadius="8dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
+                    </LinearLayout>
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                <ImageView
-                    android:src="@drawable/ic_shopping_cart_black_24dp"
-                    android:layout_width="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="50dp" />
+                        <TextView
+                            android:text="@string/address_bullet"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-                <TextView
-                    android:text="Cart"
-                    android:fontFamily="@font/bellerose"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/textCardSize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/txt_studio_address"
+                            android:text=" Address studio"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_history"
-            android:layout_marginRight="8dp"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:cardCornerRadius="8dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                        <TextView
+                            android:text="@string/time_bullet"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/txt_time"
+                            android:text=" Time"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:src="@drawable/ic_history_black_24dp"
-                    android:layout_width="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="50dp" />
+                    </LinearLayout>
 
-                <TextView
-                    android:text="History"
-                    android:fontFamily="@font/bellerose"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/textCardSize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:text="@string/studioroom_bullet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/txt_studio_room"
+                        android:text=" Studio Room #2"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_notification"
-            android:layout_marginRight="8dp"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:cardCornerRadius="8dp"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
+                </LinearLayout>
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <ImageView
-                    android:src="@drawable/ic_notifications_black_24dp"
-                    android:layout_width="50dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_height="50dp" />
+                    <TextView
+                        android:text="@string/bullet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/txt_time_remain"
+                        android:text=" Time"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:text="Notification"
-                    android:fontFamily="@font/bellerose"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="@dimen/textCardSize"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_marginTop="4dp"
+                        android:id="@+id/btn_change_booking"
+                        android:layout_marginRight="4dp"
+                        android:text="CHANGE"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_border_bg"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                    <Button
+                        android:layout_marginTop="4dp"
+                        android:id="@+id/btn_delete_booking"
+                        android:layout_marginRight="4dp"
+                        android:text="DELETE"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_border_bg"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
