--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,7 @@
         android:layout_height="wrap_content" >
 
         <ImageView
-            android:src="@drawable/ic_baseline_menu_24"
+            android:src="@drawable/ic_baseline_exit_to_app_24"
             android:layout_width="60dp"
             android:layout_height="60dp" />
 
@@ -57,7 +58,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:weightSum="4"
+            android:weightSum="3"
             android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
@@ -93,36 +94,7 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_view_cart"
-                android:layout_marginRight="8dp"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                app:cardCornerRadius="8dp"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:src="@drawable/ic_shopping_cart_black_24dp"
-                        android:layout_width="50dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_height="50dp" />
-
-                    <TextView
-                        android:text="Cart"
-                        android:fontFamily="@font/bellerose"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="20sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view_history"
