--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -6,7 +6,7 @@
         android:title="Home"/>
 
     <item android:id="@+id/action_shopping"
-        android:icon="@drawable/ic_shopping_cart_black_24dp"
-        android:title="Shopping" />
+        android:icon="@drawable/ic_baseline_info_white_24"
+        android:title="About" />
 
 </menu>
